# dexscraper

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  dex.py  pyproject.toml  requirements.txt  setup.cfg
.github/: release-drafter.yml
.github/workflows/: ci.yml  prjury.yml  release-drafter.yml  release.yml
dexscraper/: __init__.py  _version.py  cli.py  cloudflare_bypass.py  config.py  enhanced_protocol.py  enhanced_scraper.py  logger.py  models.py  protocol.py  scraper.py  utils.py
scripts/: generate-release-notes.sh
tests/: __init__.py  conftest.py  test_cli.py  test_cloudflare_bypass.py  test_config.py  test_decode_pair.py  test_edge_cases.py  test_enhanced_ohlc.py  test_models.py  test_package_metadata.py  test_scraper.py
